Fix wrapping for SV and single lines.

--- a/js/Columns.css
+++ b/js/Columns.css
@@ -47,7 +47,6 @@
 }
 
 .ColumnLabels {
-	hyphens: auto;
 	position: absolute;
 	overflow: hidden;
 	display: flex;
